Section Editable lebel

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
                            <tr>
                               <td>
                                  <div class="bttn border_bttn">
-                                    <a style="color: #000000" class="link" href="https://tomlogisch-com/contact-us/" editable label="Get in touch" >get in touch <span>+</span> </a>
+                                    <a style="color: #000000" class="link" href="https://tomlogisch-com/contact-us/" editable label="Get in touch button" >get in touch <span>+</span> </a>
                                  </div>
                               </td>
                            </tr>
@@ -907,7 +907,7 @@
                            <tr>
                               <td>
                                  <div class="bttn border_bttn">
-                                    <a style="color: #000000" class="link" href="https://tomlogisch-com/contact-us/" editable label="Get In touch" >get in touch <span>+</span> </a>
+                                    <a style="color: #000000" class="link" href="https://tomlogisch-com/contact-us/" editable label="Get In touch button" >get in touch <span>+</span> </a>
                                  </div>
                               </td>
                            </tr>
@@ -994,10 +994,10 @@
                            <tr><td style="height: 16px"></td></tr>
                            <tr class="social_links">
                               <td>
-                                 <a href="#">linkedin +</a>
-                                 <a href="#">facebook +</a>
-                                 <a href="#">whatsapp +</a>
-                                 <a href="#">instagram +</a>
+                                 <a editable label="Social Linkedin"  href="#">linkedin +</a>
+                                 <a editable label="Social Facebook"  href="#">facebook +</a>
+                                 <a editable label="Social Whatsapp"  href="#">whatsapp +</a>
+                                 <a editable label="Social Instagram" href="#">instagram +</a>
                               </td>
                            </tr>
                            <tr><td style="height: 18px"></td></tr>
@@ -1008,7 +1008,7 @@
                            </tr>
                            <tr class="style_a">
                               <td>
-                                 <a href="#">Privacy policy of tom logisch +</a>
+                                 <a editable label="Privacy policy Button" href="#">Privacy policy of tom logisch +</a>
                               </td>
                            </tr>
                            <tr><td style="height: 11px"></td></tr>
@@ -1029,7 +1029,7 @@
                               </td>
                            </tr>
                            <tr><td style="height: 15px"></td></tr>
-                           <tr class="copy_right">
+                           <tr class="copy_right" editable label="Copyright info">
                               <td>
                                  <p>
                                     ©2021 tom logisch<sup>®</sup>. All rights reserved.
