--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             background-color: #f3f4f4 /*Background Color*/;
             }
             table {
-            font-family: "Open Sans", sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-size: 14px;
             color: #000000;
             }
@@ -119,7 +119,7 @@
             }
             .h1,
             .h1 p {
-            font-family: "Open Sans", sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-size: 26px;
             letter-spacing: -1px;
             margin-bottom: 16px;
@@ -128,7 +128,7 @@
             }
             .h2,
             .h2 p {
-            font-family: "Open Sans", sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-size: 20px;
             letter-spacing: 0;
             margin-top: 2px;
@@ -143,13 +143,15 @@
             h4,
             h5,
             h6 {
-            font-family: "Open Sans", sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-weight: normal;
             }
             h1 {
             font-size: 21px;
             line-height: 26px;
             margin: 0px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 400;
             }
             h2 {
             font-size: 18px;
@@ -299,6 +301,8 @@
             font-size: 12px;
             margin: 0px;
             padding: 0px;
+            font-weight: 400;
+            font-family: 'Open Sans', sans-serif;
             }
             td a {
             padding: 0px;
@@ -331,6 +335,8 @@
             .footer p {
             line-height: 14px;
             font-size: 10px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: 400;
             }
             .footer p span {
             display: block;
@@ -338,7 +344,7 @@
             .social_links a {
             color: #000;
             font-size: 10px;
-            font-family: "Open Sans", sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-style: italic;
             text-decoration: underline;
             display: block;
@@ -347,7 +353,7 @@
             .style_a a {
             color: #000;
             font-size: 10px;
-            font-family: "Open Sans", sans-serif;
+            font-family: 'Open Sans', sans-serif;
             font-style: italic;
             text-decoration: underline;
             display: inline-block;
@@ -362,10 +368,11 @@
             text-align: center;
             }
             .bottom_inner td p {
-            font-size: 10px;
+            font-size: 8px;
             margin: 0px;
             padding: 0px;
             font-style: italic;
+            font-family: 'Open Sans', sans-serif;
             }
             /* Responsive Css */
             @media only screen and (max-width: 599px) {
